<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.filters.Filters">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/filter_for"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/HeadLine3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_by"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/order_by_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingLeft="17dp"
                        android:paddingRight="17dp"
                        android:text="@string/filter_recommended"
                        app:icon="@drawable/ic_baseline_navigate_next_32"
                        app:iconGravity="end"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:alpha=".4"
                android:background="#66000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/review_title"
                        style="@style/HeadLine3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/filter_for_stars"
                        app:layout_constraintBottom_toTopOf="@+id/review_line_chart"
                        app:layout_constraintHorizontal_bias="0.3"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/review_line_chart"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:layout_marginTop="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/review_title" />

                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/price_slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="90dp"
                        android:paddingTop="0dp"
                        android:stepSize="1.0"
                        android:valueFrom="1.0"
                        android:valueTo="5.0"
                        app:labelBehavior="floating"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/review_line_chart"
                        app:values="@array/review_range_slider"></com.google.android.material.slider.RangeSlider>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:alpha=".4"
                android:background="#66000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="0dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:id="@+id/popular_words_title"
                        style="@style/HeadLine3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/popular_words"
                        app:layout_constraintBottom_toTopOf="@+id/words_wallet"
                        app:layout_constraintHorizontal_bias="0.3"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/words_wallet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/popular_words_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:alpha=".4"
                android:background="#66000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="0dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:id="@+id/filter_for_marketplace"
                        style="@style/HeadLine3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/filter_for_marketplace"
                        app:layout_constraintBottom_toTopOf="@+id/marketplace_list"
                        app:layout_constraintHorizontal_bias="0.3"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/marketplace_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@+id/filter_for_marketplace">

                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>