<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.Home">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/mainActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/recent_researches_full_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="50dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/recent_researches_title"
                            style="@style/Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/recent_researches"
                            android:textAllCaps="true"></TextView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:gravity="center_vertical|end"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/recent_researches_view_all"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:focusable="true"
                                android:paddingLeft="5dp"
                                android:paddingTop="10dp"
                                android:paddingRight="5dp"
                                android:paddingBottom="10dp"
                                android:text="@string/view_all">

                            </Button>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/recentResearchNoResults"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <include
                            layout="@layout/home_no_results"
                            app:text="@{(@string/no_research_yet).toUpperCase()}"></include>
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recent_researches_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/saved_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/saved_reviews_title"
                            style="@style/Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/saved_reviews"
                            android:textAllCaps="true"></TextView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:gravity="center_vertical|end"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/saved_reviews_view_all"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:focusable="true"
                                android:paddingLeft="5dp"
                                android:paddingTop="10dp"
                                android:paddingRight="5dp"
                                android:paddingBottom="10dp"
                                android:text="@string/view_all">

                            </Button>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/reviewsNoResults"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <include
                            layout="@layout/home_no_results"
                            app:text="@{`ANCORA NESSUNA RICERCA`}"></include>
                    </LinearLayout>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/saved_reviews_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/related_products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/recent_related_products_title"
                            style="@style/Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/related_products"
                            android:textAllCaps="true"></TextView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:gravity="center_vertical|end"
                                android:orientation="horizontal">

                                <Button
                                    android:id="@+id/related_products_view_all"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:paddingLeft="5dp"
                                    android:paddingTop="10dp"
                                    android:paddingRight="5dp"
                                    android:paddingBottom="10dp"
                                    android:text="@string/view_all">

                                </Button>
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/related_products_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>